--- a/new/form.html
+++ b/new/form.html
@@ -3,16 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>הרשמה</title>
-        <link rel="stylesheet" href="/css/form.css" />
-        <link rel="stylesheet" href="/css/footer.css" />
+        <link rel="stylesheet" href="/new/form.css" />
         <meta name="viewport" content="width=device-width, initial-scale:1.0">
     </head>
     <body>
-        <div class="logo">
-            
-            <a href="/pages/main.html"><img src="/img/logo.png" alt=""></a>
-            <h2>לחזרה לעמוד הראשי</h2>
-        </div>
         <h1>הרשמה <strong>עכשיו בחינם</strong></h1>
         <p>מלאו את השדות החסרים והתחילו <strong>לטנדקס</strong></p>
         <form action=''>
@@ -63,37 +57,5 @@
             </fieldset>
             <input type="submit" value="הרשמה!" />
         </form>
-
-        <footer>
-            <div class="footerLinks">
-                <ul class="bottom-border">
-                    <h2>קישורים מהירים</h2>
-                    <li><a class="footLinksli" href="main.html">עמוד הבית</a></li>
-                    <li><a class="footLinksli">קצת עלינו</a></li>
-                    <li><a class="footLinksli">איך זה עובד</a></li>
-                    <li><a class="footLinksli">הרשמה</a></li>
-                    <li><a class="footLinksli">בוגרים מאושרים</a></li>
-                    <li><a class="footLinksli">גרושים מאושרים</a></li>
-                    <li><a class="footLinksli">חנות</a></li>
-                </ul>
-            </div>
-            <div class="footerLinks">
-                <ul class="bottom-border">
-                    <h2>תקנון ופרטיות</h2>
-                    <li><a class="footLinksli">תקנון האתר</a></li>
-                    <li><a class="footLinksli">מדיניות התשלומים</a></li>
-                    <li><a class="footLinksli">מדיניות פרטיות</a></li>
-                </ul>
-            </div>
-            <div class="footerLinks">
-                <ul>
-                    <h2>סושיאל ופניות</h2>
-                    <li><a class="footLinksli">Tindex בפייסבוק</a></li>
-                    <li><a class="footLinksli">Tindex באינסטגרם</a></li>
-                    <li><a class="footLinksli">contact@tindex.com</a></li>
-                    <li><a class="footLinksli">צור קשר</a></li>
-                </ul>
-            </div>
-        </footer>
     </body>
 </html>
