--- a/new/main.html
+++ b/new/main.html
@@ -1,113 +1,47 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tindex.html</title>
-        <link rel="stylesheet" href="/css/header.css">
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/footer.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tindex.html</title>
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="form.css">
+</head>
 
-    <body>
-        <div class="cotain">
-            <header>
-                <div class="logo">
-                    <img src="/img/logo.png" alt="">
-                </div>
-                <nav>
-                    <a href="/pages/main.html">בית</a>
-                    <a href="aboutUs.html">קצת עלינו</a>
-                    <a href="/pages/howItWorks.html">איך זה עובד?</a>
-                    <a href="/pages/form.html">הרשמה</a>
-                    <a href="/pages/marry.html">בוגרים מאושרים</a>
-                    <a href="/pages/divorce.html">גרושים מאושרים</a>
-                    <a href="/pages/store.html">חנות</a>
-                    <a target=_blank href="https://wa.me/972502200121">תמיכה</a>
-                </nav>
-            </header>
-            <main>
-                <div id="top">
-                    <h1>משדכים לעולם טוב יותר!</h1>
-                    <img src="/img/Gay_couple_wedding_faceless.jpg" alt="זוג
+<body>
+    <div class="cotain">
+        <header>
+            <div class="logo">
+                <img src="/img/logo.png" alt="">
+            </div>
+            <nav>
+                <a href="main.html">בית</a>
+                <a href="form.html">הרשמה</a>
+                <a href="">משחקי הכרויות</a>
+            </nav>
+        </header>
+        <main>
+            <div id="top">
+                <h1>משדכים לעולם טוב יותר!</h1>
+                <img src="https://raw.githubusercontent.com/RonRicher/tindex.html/cc6aba9e5e20cbd615091ae48358123a7dda8fda/img/Gay_couple_wedding_faceless.jpg"
+                    alt="זוג
                         בנים בחליפות חתן שחורות">
-                </div>
-                <div id="information">
-                    <div class="order">
-                        <div class="card">
-                            <p>הארגון שלנו קם בשביל האנשים שאיבדו את חייהם למען
-                                פיתוח התוכנה...
-                                <a href="aboutUs.html">לקריאה נוספת...</a>
-                            </p>
-                            <img src="/img/מי-אנחנו2.png" class="image" alt="מי
-                                אנחנו באנגלית">
-                        </div>
-                        <div class="card">
-                            <p>מדריך מפורט למשתמש עד למציאת הזיווג המושלם:
-                                <a href="howItWorks.html">לקריאה נוספת...</a>
-                            </p>
-                            <img src="/img/מדריך.jpg" class="image" alt="מדריך
-                                לזוגיות">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="video">
-                    <h2>מור גפן מנהלת התוכן שלנו בטיפים למציאת אהבת חייכם</h2>
-                    <iframe
-                        src="https://www.youtube.com/embed/HyI8eKwb99A?controls=0"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write;
-                        encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-            </main>
-
-            <footer>
-                <div class="footerLinks">
-                    <ul class="bottom-border">
-                        <h2>קישורים מהירים</h2>
-                        <li><a id="hover" class="footLinksli" href="/main.html">עמוד
-                                הבית</a></li>
-                        <li><a class="footLinksli" href="/pages/aboutUs.html">קצת
-                                עלינו</a></li>
-                        <li><a class="footLinksli"
-                                href="/pages/howItWorks.html">איך זה עובד</a></li>
-                        <li><a class="footLinksli" href="/pages/form.html">הרשמה</a></li>
-                        <li><a class="footLinksli" href="/pages/marry.html">בוגרים
-                                מאושרים</a></li>
-                        <li><a class="footLinksli" href="/pages/divorce.html">גרושים
-                                מאושרים</a></li>
-                        <li><a class="footLinksli" href="/pages/store.html">חנות</a></li>
-                    </ul>
-                </div>
-                <div class="footerLinks">
-                    <ul class="bottom-border">
-                        <h2>תקנון ופרטיות</h2>
-                        <li><a class="footLinksli"
-                                href="/pages/sitePolicy.html">תקנון האתר</a></li>
-                        <li><a class="footLinksli" href="/pages/paymentsPolicy.html">מדיניות התשלומים</a></li>
-                        <li><a class="footLinksli"
-                                href="/pages/sitePolicy.html">מדיניות פרטיות</a></li>
-                    </ul>
-                </div>
-                <div class="footerLinks">
-                    <ul>
-                        <h2>סושיאל ופניות</h2>
-                        <li><a class="footLinksli" href="facebook.com">Tindex
-                                בפייסבוק</a></li>
-                        <li><a class="footLinksli" href="instagram.com">Tindex
-                                באינסטגרם</a></li>
-                        <li><a class="footLinksli">contact@tindex.com</a></li>
-                        <li><a class="footLinksli" target=_blank
-                                href="https://wa.me/972502200121">צור קשר
-                                ב-WhatsApp</a></li>
-                    </ul>
-                </div>
-            </footer>
-        </div>
-    </body>
+            </div>
+            <form action=''>
+                <fieldset id="details">
+                    <h2>היכנסו ותהנו ממגוון אדיר של משחקי הכרויות</h2>
+                    <label for="useName">שם משתמש <input id="userName" name="last-name" type="text" required min="2"
+                            max="15" /></label>
+                    <label for="password">סיסמא <input id="password" name="new-password" type="password"
+                            pattern="[a-z0-5]{8,}" required /></label>
+                            <p>במידה ואינך רשום <a href="form.html">הירשם כאן</a></p>
+                </fieldset>
+            </form>
+        </main>
+    </div>
+</body>
 
 </html>
