--- a/new/main.html
+++ b/new/main.html
@@ -15,7 +15,7 @@
     <div class="cotain">
         <header>
             <div class="logo">
-                <img src="/img/logo.png" alt="">
+                <img src="https://raw.githubusercontent.com/RonRicher/tindex.html/cc6aba9e5e20cbd615091ae48358123a7dda8fda/img/logo.png" alt="">
             </div>
             <nav>
                 <a href="main.html">בית</a>
@@ -39,6 +39,7 @@
                             pattern="[a-z0-5]{8,}" required /></label>
                             <p>במידה ואינך רשום <a href="form.html">הירשם כאן</a></p>
                 </fieldset>
+                <button id="submit">כניסה</button>
             </form>
         </main>
     </div>
