--- a/new/form.html
+++ b/new/form.html
@@ -6,26 +6,27 @@
     <title>הרשמה</title>
     <link rel="stylesheet" href="/new/form.css" />
     <meta name="viewport" content="width=device-width, initial-scale:1.0">
+    <script src="/new/form.js" defer></script>
 </head>
 
 <body>
     <h1>הרשמה <strong>עכשיו בחינם</strong></h1>
     <p>מלאו את השדות החסרים והתחילו <strong>לטנדקס</strong></p>
-    <form action=''>
+    <form>
         <fieldset id="details">
-            <label for="full-name">שם מלא <input id="full-name" name="full-name" type="text" required min="2"/></label>
-            <label for="useName">שם משתמש <input id="userName" name="last-name" type="text" required min="2" max="15"/></label>
+            <label for="full-name">שם מלא <input id="full-name" name="full-name" type="text" required minlength="2" maxlength="15"/></label>
+            <label for="userName">שם משתמש <input id="userName" name="userName" type="text" required minlength="2" maxlength="15"/></label>
             <label for="email">אימייל<input id="email" name="email" type="email" required /></label>
-            <label for="password">סיסמא <input id="password" name="new-password" type="password"
-                    pattern="[a-z0-5]{8,}" required /></label>
+            <label for="password">סיסמא <input id="password" name="password" type="password"
+                     required minlength="8" maxlength="15"/></label>
         </fieldset>
         <fieldset>
             <h4>מין</h4>
-            <label for="personal-account"><input id="personal-account" type="radio" name="account-type"
+            <label for="male"><input id="male" type="radio" name="account-type"
                     class="inline" /> זכר</label>
-            <label for="business-account"><input id="business-account" type="radio" name="account-type"
+            <label for="female"><input id="female" type="radio" name="account-type"
                     class="inline" /> נקבה</label>
-            <label for="business-account"><input id="business-account" type="radio" name="account-type"
+            <label for="other"><input id="other" type="radio" name="account-type"
                     class="inline" /> אחר</label>
             <label for="terms-and-conditions" name="terms-and-conditions">
         </fieldset>
@@ -48,6 +49,7 @@
             </label>
         </fieldset>
         <button id="submit">הרשמה</button>
+        <p id="existUserName" style="color:red"></p>
     </form>
 </body>
 
