--- a/game/data.html
+++ b/game/data.html
@@ -12,10 +12,19 @@
 <body>
 <main>
     <h1>הוספת 5 שאלות על עצמך:</h1>
-    <input type="text" id="question" placeholder="הכנס שאלה">
-    <input type="text" id="answer1" placeholder="הכנס תשובה נכונה">
-    <input type="text" id="answer2" placeholder="הכנס תשובה שגויה">
-    <button id="add">הוסף שאלה</button>
+    <form action="">
+    <label for="question"></label>
+    <input type="text" id="question" placeholder="הכנס שאלה" required>
+    <label for="answer1"></label>
+    <input type="text" id="answer1" placeholder="הכנס תשובה נכונה" required>
+    <label for="answer2"></label>
+    <input type="text" id="answer2" placeholder="הכנס תשובה שגויה" required>
+    <label for="answer3"></label>
+    <input type="text" id="answer3" placeholder="הכנס תשובה שגויה" required>
+    <label for="answer4"></label>
+    <input type="text" id="answer4" placeholder="הכנס תשובה שגויה" required>
+    <input id="add" type="submit" value="הוסף שאלה"></input>
+</form>
 </main>
     
 </body>
