--- a/game/game.html
+++ b/game/game.html
@@ -20,8 +20,8 @@
           </div>
         </div>
         <div class="controls">
-          <button id="start-btn" class="start-btn btn">Start</button>
-          <button id="next-btn" class="next-btn btn hide">Next</button>
+          <button id="start-btn" class="start-btn btn">התחל</button>
+          <button id="next-btn" class="next-btn btn hide">שאלה הבאה</button>
         </div>
       </div>
 </body>
