--- a/game/data.html
+++ b/game/data.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <main>
-    <h1>הוספת 5 שאלות על עצמך:</h1>
+    <h1>הוספת 5 שאלות למאגר:</h1>
     <form action="">
     <label for="question"></label>
     <input type="text" id="question" placeholder="הכנס שאלה" required>
@@ -24,6 +24,7 @@
     <label for="answer4"></label>
     <input type="text" id="answer4" placeholder="הכנס תשובה שגויה" required>
     <input id="add" type="submit" value="הוסף שאלה"></input>
+    <input id="add1" type="submit" value="הוסף למאגר"></input>
 </form>
 </main>
     
