--- a/new/main.html
+++ b/new/main.html
@@ -21,15 +21,14 @@
             <nav>
                 <a href="main.html">בית</a>
                 <a href="form.html">הרשמה</a>
-                <a href="">משחקי הכרויות</a>
+                <a href="/new/games.html">משחקים</a>
             </nav>
         </header>
         <main>
             <div id="top">
-                <h1>משדכים לעולם טוב יותר!</h1>
-                <img src="https://raw.githubusercontent.com/RonRicher/tindex.html/cc6aba9e5e20cbd615091ae48358123a7dda8fda/img/Gay_couple_wedding_faceless.jpg"
-                    alt="זוג
-                        בנים בחליפות חתן שחורות">
+                <h1>משחקים לעולם טוב יותר!</h1>
+                <img src="/images/mario.webp"
+                    alt="">
             </div>
             <form action=''>
                 <fieldset id="details">
