--- a/new/main.html
+++ b/new/main.html
@@ -21,15 +21,14 @@
             <nav>
                 <a href="main.html">בית</a>
                 <a href="form.html">הרשמה</a>
-                <a href="/new/games.html">משחקים</a>
             </nav>
         </header>
         <main>
-            <div id="top">
+            <!-- <div id="top">
                 <h1>משחקים לעולם טוב יותר!</h1>
-                <img src="/images/mario.webp"
+                <img src="/images/call.webp"
                     alt="">
-            </div>
+            </div> -->
             <form action=''>
                 <fieldset id="details">
                     <h2>היכנסו ותהנו ממגוון אדיר של משחקי הכרויות</h2>
