--- a/game/game.html
+++ b/game/game.html
@@ -13,6 +13,7 @@
     <div id="score"></div>
     <div id="links"><a href="/game/data.html">מצב עריכת שאלות</a>
       <a href="/new/games.html">עמוד המשחקים</a></div>
+      <p id="time"></p>
   </header>
     <div class="container">
         <div id="question-container" class="hide">
