--- a/game/game.html
+++ b/game/game.html
@@ -28,6 +28,8 @@
           <button id="start-btn" class="start-btn btn">התחל</button>
           <button id="next-btn" class="next-btn btn hide">שאלה הבאה</button>
         </div>
+        <audio id="correctAudio" src="/audio/correctAudio.wav"></audio>
+        <audio id="wrongAudio" src="/audio/wrongAudio.wav"></audio>
       </div>
 </body>
 </html>
