--- a/game/game.html
+++ b/game/game.html
@@ -11,8 +11,8 @@
 <body>
   <header>
     <div id="score"></div>
-    <div id="links"><a href="/game/data.html">מצב עריכת שאלות</a>
-      <a href="/new/games.html">עמוד המשחקים</a></div>
+    <div id="links"><a href="/data/data.html">מצב עריכת שאלות</a>
+      <a href="/gamesPage/games.html">עמוד המשחקים</a></div>
       <p id="time"></p>
   </header>
     <div class="container">
@@ -28,6 +28,8 @@
         <div class="controls">
           <button id="start-btn" class="start-btn btn">התחל</button>
           <button id="next-btn" class="next-btn btn hide">שאלה הבאה</button>
+          <button id="changeQuestion" class="bonus hide">החלף שאלה</button>
+          <button id="revealAnswer" class="bonus hide">גלה תשובה</button>
         </div>
         <audio id="correctAudio" src="/audio/correctAudio.wav"></audio>
         <audio id="wrongAudio" src="/audio/wrongAudio.wav"></audio>
