--- a/game/game.html
+++ b/game/game.html
@@ -11,8 +11,11 @@
 <body>
   <header>
     <div id="score"></div>
+    <div id="highScore"></div>
     <div id="links"><a href="/data/data.html">מצב עריכת שאלות</a>
-      <a href="/gamesPage/games.html">עמוד המשחקים</a></div>
+      <a href="/gamesPage/games.html">עמוד המשחקים</a> 
+       <a href="/game/game.html">משחק חדש</a>
+    </div>
       <p id="time"></p>
   </header>
     <div class="container">
