--- a/game/game.html
+++ b/game/game.html
@@ -12,9 +12,10 @@
   <header>
     <div id="score"></div>
     <div id="highScore"></div>
-    <div id="links"><a href="/data/data.html">מצב עריכת שאלות</a>
-      <a href="/gamesPage/games.html">עמוד המשחקים</a> 
-       <a href="/game/game.html">משחק חדש</a>
+    <div id="links">
+      <a href="/data/data.html" class="link">מצב עריכת שאלות</a>
+      <a href="/gamesPage/games.html" class="link">עמוד המשחקים</a> 
+       <a href="/game/game.html" class="link">משחק חדש</a>
     </div>
       <p id="time"></p>
   </header>
